mdapi/unpackaged/objects/Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Other_Date__c</fullName>
        <label>Other Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_STring__c</fullName>
        <label>Test STring</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_String_2__c</fullName>
        <label>Test String 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>